--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
     pageFlip.loadFromImages([
       'assets/page1.jpg',
       'assets/page2.jpg',
-      'assets/page3.jpg'
-      'assets/page4.jpg'
-      'assets/page5.jpg'
-      'assets/page6.jpg'
+      'assets/page3.jpg',
+      'assets/page4.jpg',
+      'assets/page5.jpg',
+      'assets/page6.jpg',
       'assets/page7.jpg'
     ]);
   </script>
